tests/invalid/continue_outside_loop.prsm
// E031: 'continue' used outside of a loop body
component ContinueOutsideLoop : MonoBehaviour {
    func handleInput() {
        continue
    }
}
